--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,8 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  min-width: 100vw;
+  max-height: 100vh;
+  min-height: 100vh;
 }
